// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`ChatItem renders renders content 1`] = `
<div
  class="sc-gsFSXq fspdoH"
  data-testid="chatItem__container"
>
  <div
    class="sc-kAyceB kDWPwt"
  >
    test chat
  </div>
  <div
    class="sc-imWYAI iDGrTm"
  >
    <i>
      test_user
      :
    </i>
     test message
  </div>
</div>
`;

exports[`ChatItem renders renders content no messages 1`] = `
<div
  class="sc-gsFSXq fspdoH"
  data-testid="chatItem__container"
>
  <div
    class="sc-kAyceB kDWPwt"
  >
    test chat
  </div>
</div>
`;

exports[`ChatItem renders renders content service message 1`] = `
<div
  class="sc-gsFSXq fspdoH"
  data-testid="chatItem__container"
>
  <div
    class="sc-kAyceB kDWPwt"
  >
    test chat
  </div>
  <div
    class="sc-imWYAI iDGrTm"
  >
    <i>
      test_user joined chat
    </i>
  </div>
</div>
`;
